[package]
name = "bst"
version = "0.1.0"
description = "A binary search tree implementation in rust with pretty printing"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
simplelog = { version = "^0.12.1", features = ["paris"] }